package Ejercicio_08;

public class Propietario extends Persona {
    public Propietario(String nss, String nombre, String direccion, String telefono) {
        super(nss, nombre, direccion, telefono);
    }
}